plugins {
    id 'java'
}

group = 'com.attachme'
version = '1.0-SNAPSHOT'
sourceCompatibility = 1.8

repositories {
    mavenCentral()
    mavenLocal()
}


dependencies {
    testImplementation('junit:junit:4.12')
    testImplementation('com.spotify:docker-client:8.16.0')
}

jar {
    archiveFileName = "attachme-agent.jar"
    manifest {
        attributes(
                'Premain-Class': 'com.attachme.agent.Agent',
                'Can-Redefine-Classes': 'true',
                'Can-Retransform-Classes': 'true',
                'Can-Set-Native-Method-Prefix': 'true',
                'Implementation-Title': "ClassLogger",
                'Implementation-Version': rootProject.version
        )
    }
}

test {
    useJUnit()
}
test.dependsOn("assemble")